mta widget tweak

--- a/widgets/mta/mta.html
+++ b/widgets/mta/mta.html
@@ -4,4 +4,4 @@
 
 <p class="time" data-bind="time"></p>
 
-<p class="direction" data-bind="direction"></p>
+<p class="direction">towards <span data-bind="direction"></span></p>
